--- a/project 1/index.html
+++ b/project 1/index.html
@@ -6,11 +6,11 @@
     <title>Frontend Mentor - Order summary card</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
-    <link rel="icon" type="image/x-icon" href="/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 </head>
 <body>
   <main>
-<img class="container" src="/illustration-hero.svg" alt="/illustration-hero">
+<img class="container" src="illustration-hero.svg" alt="/illustration-hero">
   
   <div  class="top">
     <h1>Order Summary</h1>
