--- a/project 1/index.html
+++ b/project 1/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <main>
-<img class="container" src="illustration-hero.svg" alt="/illustration-hero">
+<img class="container" src="illustration-hero.svg" alt="illustration-hero">
   
   <div  class="top">
     <h1>Order Summary</h1>
@@ -20,7 +20,7 @@
         <p> anywhere you like!</p>
   </div>
   <div class="mid">
-         <img id="img" src="/icon-music.svg" alt="/icon-music">
+         <img id="img" src="icon-music.svg" alt="icon-music">
    <div id="a">
     <h3>Annual Plan</h3>
     <p id="b">$59.99/year</p>
