--- a/project 1/index.html
+++ b/project 1/index.html
@@ -6,11 +6,11 @@
     <title>Frontend Mentor - Order summary card</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
 </head>
 <body>
   <main>
-<img class="container" src="illustration-hero.svg" alt="illustration-hero">
+<img class="container" src="images/illustration-hero.svg" alt="illustration-hero">
   
   <div  class="top">
     <h1>Order Summary</h1>
@@ -20,7 +20,7 @@
         <p> anywhere you like!</p>
   </div>
   <div class="mid">
-         <img id="img" src="icon-music.svg" alt="icon-music">
+         <img id="img" src="images/icon-music.svg" alt="icon-music">
    <div id="a">
     <h3>Annual Plan</h3>
     <p id="b">$59.99/year</p>
